# ticket-printer

./: .rustfmt.toml  .travis.yml  Cargo.toml  LICENSE-APACHE  README.md
ci/: before_deploy.ps1  before_deploy.sh
config/: ticket_printer.toml
src/: args.rs  config.rs  main.rs  pdf.rs
src/services/: jira.rs  mod.rs  trello.rs
