[package]
name = "ticket_printer"
authors = ["Marc Mettke <marc@itmettke.de>"]
description = "A program for printing jira or trello tickets on small cards"
license = "MIT OR Apache-2.0"
repository = "https://github.com/mettke/ticket-printer"
readme = "README.md"
keywords = ["pdf", "jira", "trello", "ticket", "print"]
categories = ["command-line-utilities"]
version = "1.3.2"
edition = "2018"

[dependencies]
clap = "2.33"
config = "0.9"
directories = "2.0"
exitfailure = "0.5"
failure = "0.1"
human-panic = "1.0"
image = "0.22"
pdfpdf = { git = "https://github.com/saethlin/pdfpdf.git" }
pdf-canvas = "0.6"
qrcode = { version = "0.11" }
reqwest = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
tempfile = "3.1"
toml = "0.5"
urlshortener = "2.0"
